@@ -55,10 +55,14 @@ Files: dh_bugfiles
 Copyright: Modestas Vainius <modestas@vainius.eu>
 License: GPL-2+
 
-Files: Debian/Debhelper/Buildsystem*, Debian/Debhelper/Dh_Buildsystems.pm
-Copyright: © 2008-2009 Modestas Vainius
-License: GPL-2+
-
 Files: dh_installinit
 Copyright: 1997-2008 Joey Hess <joeyh@debian.org>, 2009 Canonical Ltd.
 License: GPL-3
+
+Files: Debian/Debhelper/Buildsystem/qmake.pm
+Copyright: © 2010 Kel Modderman
+License: GPL-2+
+
+Files: Debian/Debhelper/Buildsystem*, Debian/Debhelper/Dh_Buildsystems.pm
+Copyright: © 2008-2009 Modestas Vainius
+License: GPL-2+
