@@ -10,6 +10,7 @@ debhelper (7.4.12) UNRELEASED; urgency=low
     This solves the problem with passing "-Bbuild" to dh, where commands
     that do not support -B would see a bogus -u option. Closes: #541773
     (It also ensures that the commands dh prints out can really be run.)
+  * qmake: New buildsystem contributed by Kel Modderman. Closes: #566840
 
  -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
 
